--- a/ARIMA.ipynb
+++ b/ARIMA.ipynb
@@ -426,6 +426,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import the library\n",
+    "from pmdarima import auto_arima\n",
+    "# Ignore harmless warnings\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
+    "X = df_No.values \n",
+    "size = 355 \n",
+    "train, test = X[0:len(X)-size], X[len(X)-size+1:len(X)]\n",
+    "\n",
+    "# Fit auto_arima function to AirPassengers dataset\n",
+    "stepwise_fit = auto_arima(train,\n",
+    "                          start_p = 1,\n",
+    "                          start_q = 1,\n",
+    "                          max_p = 3,\n",
+    "                          max_q = 3,\n",
+    "                          m = 12,\n",
+    "                          start_P = 0,\n",
+    "                          seasonal = True,\n",
+    "                          d = None,\n",
+    "                          D = 1,\n",
+    "                          trace = True,\n",
+    "                          error_action ='ignore',\n",
+    "                          suppress_warnings = True,\n",
+    "                          stepwise = True)\n",
+    "# To print the summary\n",
+    "stepwise_fit.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 49,
    "metadata": {},
    "outputs": [
@@ -701,9 +736,6 @@
     }
    ],
    "source": [
-    "X = df_No.values \n",
-    "size = 355 \n",
-    "train, test = X[0:len(X)-size], X[len(X)-size+1:len(X)]\n",
     "history = [x for x in train] \n",
     "predictions = list() \n",
     "for i in range(len(test)): \n",
@@ -5521,7 +5553,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
