使用 Colaboratory 建立

--- a/Prophet 20230809.ipynb
+++ b/Prophet 20230809.ipynb
@@ -11,8 +11,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Code from Chin-Chieh Wu (Chang Gung University)"
+      ],
+      "metadata": {
+        "id": "d21KTqONAMIo"
+      },
+      "id": "d21KTqONAMIo"
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "296cfeb2",
       "metadata": {
         "colab": {
@@ -203,7 +213,7 @@
         "id": "DsFgcADp7nzJ"
       },
       "id": "DsFgcADp7nzJ",
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -228,7 +238,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "d26780cd",
       "metadata": {
         "colab": {
@@ -308,7 +318,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "69edc0ae",
       "metadata": {
         "id": "69edc0ae"
@@ -341,7 +351,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "56b4a969",
       "metadata": {
         "id": "56b4a969"
@@ -364,7 +374,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "4390b7bc",
       "metadata": {
         "colab": {
@@ -606,7 +616,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "62b00476",
       "metadata": {
         "id": "62b00476"
@@ -644,7 +654,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "9b3b9806",
       "metadata": {
         "colab": {
@@ -1311,7 +1321,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "3106bf3a",
       "metadata": {
         "id": "3106bf3a"
@@ -1334,7 +1344,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "836ff096",
       "metadata": {
         "id": "836ff096"
@@ -1357,7 +1367,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "54c076cc",
       "metadata": {
         "id": "54c076cc"
@@ -1380,7 +1390,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "fb17e87f",
       "metadata": {
         "colab": {
@@ -1437,7 +1447,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "6d063dfb",
       "metadata": {
         "colab": {
